# mumax-oommf-tools

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: test.yml
relax_100x10x5-20t.out/: m_full000000.ovf  m_full000001.ovf  m_full000002.ovf  m_full000003.ovf  m_full000004.ovf  m_full000005.ovf  m_full000006.ovf  m_full000007.ovf  m_full000008.ovf  m_full000009.ovf  m_full000010.ovf  m_full000011.ovf  m_full000012.ovf  m_full000013.ovf  m_full000014.ovf  m_full000015.ovf  m_full000016.ovf  m_full000017.ovf  m_full000018.ovf  m_full000019.ovf  table.txt
src/mumax_oommf_tools/: __init__.py
src/mumax_oommf_tools/configs/: __init__.py  hdf5.py  ovf2.py
src/mumax_oommf_tools/io/: __init__.py  exceptions.py  hdf5_store.py  out_reader.py  ovf2_reader.py
tests/: test_bad_ovfs.py  test_io.py
tests/data/bad_ovfs/: bad_binary4_flag.ovf  bad_binary8_flag.ovf  invalid_output_format.ovf  no_data_marker.ovf  no_header_marker.ovf  not_ovf2.ovf  not_rectangular.ovf  unclosed_datablock.ovf  valuedim_not_3.ovf  wrong_data_number.ovf
tests/data/test.out/: m_full000000.ovf  m_full000002.ovf  m_full000003.ovf  m_full000004.ovf  m_full000005.ovf  m_full000006.ovf  m_full000007.ovf  m_full000008.ovf  m_full000009.ovf  mumax_oommf_tools.h5  table.txt
tests/data/tiny_ovfs/: binary4.ovf  binary8.ovf  text.ovf
